# Edifice

./: 404.html  Cargo.toml  README.md  index.html  print.html  searchindex.js  searchindex.json
book/: book.toml
reference_guide/: commands.html  dag.html  dataset.html  dfs.html  module.html  target.html
src/: command.rs  dataset.rs  dataset_file.rs  dataset_file_content.rs  lib.rs  main.rs  module.rs  modules.rs  origins.rs  provider.rs  registries.rs  rule.rs  target_file.rs
tests/: .gitignore  common.rs  hydra.toml  module.toml  test.rs  test_00_no_command.rs  test_01_info.rs  test_01_show.rs  test_02_fetch_git_provider.rs  test_02_fetch_git_registry.rs  test_02_fetch_local_provider.rs  test_02_fetch_local_registry.rs  test_03_list_git_provider.rs  test_03_list_git_registry.rs  test_03_list_local_provider.rs  test_03_list_local_registry.rs  test_04_check_git_provider.rs  test_04_check_git_registry.rs  test_04_check_local_provider.rs  test_04_check_local_registry.rs  test_05_update_git_provider.rs  test_05_update_git_registry.rs  test_05_update_local_provider.rs  test_05_update_local_registry.rs  test_06_install_git_provider.rs  test_06_install_git_registry.rs  test_06_install_local_provider.rs  test_06_install_local_registry.rs  test_07_add_module.rs  test_08_build.rs  test_09_new.rs  test_check.rs  test_fetch.rs  test_fetch_git_module.rs  test_fetch_local_module.rs  test_install.rs  test_install_git_modules.rs  test_install_local_modules.rs  test_list_git.rs  test_list_git_provider.rs  (+5 more)
user_guide/: build.html  dataset.html  environement.html  files.html  (+4 more)
(+100 files in other folders)
