[package]
name = "edifice"
version = "0.1.0"
edition = "2021"
authors = ["AnnRTL"]

[[bin]]
name = "edifice"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
crc32fast = "1.4.2"
git2 = "0.19.0"
glob = "0.3.1"
home = "0.5.9"
indexmap = "2.6.0"
regex = "1.11.1"
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
tabled = "0.16.0"
toml = "0.8.19"

[dev-dependencies]
serial_test = "3.1.1"
function_name = "0.3.0"
